--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
-language: python
+language: generic
 
 dist: trusty
-
-python:
-  - "2.6"
-  - "2.7"
 
 matrix:
   include:
@@ -18,9 +14,7 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew list python &>/dev/null || brew install python; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install pyenv-virtualenv; fi
+  - pip install py2app
 
 install:
-  - python setup.py install
-
-script:
-  - make test
+  - python setup.py py2app -A
