--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,8 @@ install:
   - python setup.py py2app -A
   - scripts/make-leelaz.sh
   - curl -O https://zero.sjeng.org/best-network
-  - | gsed -i \
+  - | 
+    gsed -i \
     -e '90s|^.*$|command = leelaz|'\
     -e '91s|^.*$|parameters = --gtp --noponder --weights best-network'\
     -e '96s|^.*$|command = leelaz|'\
