--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [General]
-language = 
+language = en
 sgffolder = 
 rsgffolder = 
 pngfolder = 
@@ -26,16 +26,16 @@ invertedmousewheel = False
 lastgraph = 
 yellowbar = #F39C12
 lastbot = 
-lastmap =
+lastmap = 
 
 [Live]
 size = 19
 komi = 7.5
 handicap = 0
 nooverlap = False
-analyser =
-black =
-white =
+analyser = 
+black = 
+white = 
 livegobanratio = 0.4
 
 [Leela-0]
@@ -49,7 +49,6 @@ profile = Fast
 command = 
 parameters = --gtp --noponder
 timepermove = 5
-
 
 [GnuGo-0]
 profile = Slow
@@ -87,14 +86,13 @@ parameters = --config=aq_config_fast.txt
 
 [LeelaZero-0]
 profile = Slow
-command = 
-parameters = --gtp --noponder --weights weights.txt
+command = ./leelaz
+parameters = --gtp --noponder --weights best-network
 timepermove = 15
 
 [LeelaZero-1]
 profile = Fast
-command = 
-parameters = --gtp --noponder --weights weights.txt
+command = ./leelaz
+parameters = --gtp --noponder --weights best-network
 timepermove = 5
-
 
