--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,14 @@ matrix:
     language: generic
     env: TOXENV=py26
   fast_finish: true
+
+before_install:
+- source scripts/deps.sh
 install:
 - source scripts/build.sh
 
-before_deploy: source scripts/dmg.sh
+before_deploy: 
+- source scripts/dmg.sh
 deploy:
   provider: releases
   api_key:
